cleanup with spotless